update version lombok, add grpc exception handler